# neon

./: Cargo.toml
.cargo/: config.toml
crates/neon-runtime/: Cargo.toml
crates/neon-runtime/src/napi/: mod.rs  object.rs  primitive.rs  tag.rs  tsfn.rs
crates/neon-runtime/src/napi/bindings/: functions.rs  types.rs
crates/neon-runtime/src/napi/serde/: de.rs  error.rs  js.rs  mod.rs  se.rs
crates/neon-sys/src/: lib.rs
src/: lib.rs  prelude.rs
src/context/: mod.rs
src/result/: mod.rs
src/types/: bigint.rs  mod.rs
test/napi/: Cargo.toml
test/napi/fixtures/: pokedex.json
test/napi/lib/: serde.js
test/napi/src/: lib.rs
test/napi/src/js/: serde.rs  types.rs
