[package]
name = "napi-tests"
version = "0.1.0"
authors = ["The Neon Community <david.herman@gmail.com>"]
license = "MIT"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.neon]
version = "*"
path = "../.."
default-features = false
features = ["default-panic-hook", "napi-6", "try-catch-api", "event-queue-api", "serde"]
